fixed siziging for all 3 parts,fixed some alignment for exterior panels components,added invisible scrollbar

--- a/My_Projects/Twitter_Clone/twitter-clone/src/App.scss
+++ b/My_Projects/Twitter_Clone/twitter-clone/src/App.scss
@@ -22,34 +22,35 @@ section,div,p,img,ul,ol,li{
     justify-content: space-between;
     align-items: end;
     border-right:solid 0.01rem grey;
-    flex:0 0 33.33%;
+    flex:0 0 30.6%;
     font-family: 'Arimo', sans-serif;
-    font-size:1.5rem;
+    font-size:1.3rem;
     nav{
       display: flex;
       flex-direction: column;
       align-items: start;
-      width: 45%; 
+      width: 43.5%; 
       ul{
         list-style: none;
         //list-style-image:url("birdhouse.png");
         img{
-          width: 0.5rem;
-          height: 0.5rem;
+          width: 1.5rem;
+          height: 2rem;
+          margin-bottom: 1rem;
         }
         #twitter-logo{
           width:4rem;
           border-radius: 75%;
           margin-left: -1.2rem;
           margin-top:0.5rem;
-          margin-bottom: 1rem;
+          margin-bottom: 1.66rem;
           
         }
         li{
-          margin-bottom: 1rem;
+          margin-bottom: 2.24rem;
         }
         button{
-          border-width: 0;
+          align-self:start;
           font-weight: bold;
           font-size: 1.1rem;
           border-radius:3rem;
@@ -57,6 +58,7 @@ section,div,p,img,ul,ol,li{
           height:3.3rem;
           color:white;
           background-color: #1d9bf0;
+          border: none;
          
         }
       } 
@@ -92,31 +94,38 @@ section,div,p,img,ul,ol,li{
   };
   #middle-container{
   
-    flex:0 0 33.33%;
+    flex:0 0 32.2%;
     overflow-y: scroll;
+    
 
     #timeline-div{
-      height: 8rem; 
+      height: 100vh; 
+      #tweet-input{
+        width: 100%;
+      }
       .twitter-timeline{
-        margin-top:-2rem;
-        position: absolute;
+        overflow-y: scroll;
       }
     }
-  
   };
+
+  #middle-container::-webkit-scrollbar{
+    display: none;}
+
   #right-container{
     display: flex;  
     flex-direction: column;
     gap: 1rem;
     padding-left: 2rem;
     border-left:solid 0.05rem grey;
-    flex:0 0 33.33%;
+    flex:0 0 37.2%;
     input{
       background-color: rgba(239,243,244,255);
       border-width: 0;
       border-radius:3rem;
       width: 50%;
       height:2.5rem;
+      margin-top: 0.32rem;
     }
       ::placeholder{
         padding-left: 2rem;
@@ -131,7 +140,7 @@ section,div,p,img,ul,ol,li{
       background-color: rgba(239,243,244,255);
       border-radius: 5%;
       overflow: hidden;
-      margin-top: 4rem;
+      
       
       .cards-header{
         display: flex;
